working+home button

--- a/src/app/isolation/isolation.component.html
+++ b/src/app/isolation/isolation.component.html
@@ -1,4 +1,10 @@
 <div class="body">
+  
+    <div class="top-right-container">
+      <button mat-icon-button (click)="goToHome()" matTooltip="Go to Home">
+        <mat-icon>home</mat-icon>
+      </button>
+    
   <div class="nine">
     <h1>
       {{ Title1 }}<span>{{ Title2 }}</span>
