--- a/src/app/chameleon-reports/moshe-reports/medical-devices/medical-devices.component.html
+++ b/src/app/chameleon-reports/moshe-reports/medical-devices/medical-devices.component.html
@@ -114,7 +114,7 @@
         class="long-search-bar"
         style="flex: 1; padding-right: 10px"
       >
-        <mat-label class="filters" style="color: blue">הקלד מסנן</mat-label>
+        <mat-label class="filters" style="color: blue"> חיפוש</mat-label>
         <input
           matInput
           [formControlName]="'globalFilter'"
