--- a/src/app/main-page-reports/main-page-reports.component.html
+++ b/src/app/main-page-reports/main-page-reports.component.html
@@ -9,5 +9,15 @@
         </button>
       </mat-card>
     </div>
+    <div class="card" *ngFor="let mosh of moshe">
+      <mat-card>
+        <mat-card-title class="title1">{{ mosh.title }}</mat-card-title>
+        <mat-card-subtitle class="title1">מבקש הדוח: {{ mosh.requester }}</mat-card-subtitle>
+        <mat-card-content>{{ mosh.content }}</mat-card-content>
+        <button mat-button class="button" [routerLink]="mosh.link">
+          להרצת הדוח
+        </button>
+      </mat-card>
+    </div>
   </div>
   
