working filter graph

--- a/src/app/sys-aid/sys-aid.component.html
+++ b/src/app/sys-aid/sys-aid.component.html
@@ -151,7 +151,7 @@
       </div>
     </div>
   </form>
-  <app-sys-graph *ngIf="showGraph" [graphData]="dataSource"></app-sys-graph>
+  <app-sys-graph *ngIf="showGraph" [graphData]="graphData"></app-sys-graph>
 
   <mat-table
   *ngIf="!showGraph"
