--- a/src/styles.scss
+++ b/src/styles.scss
@@ -12,4 +12,6 @@ body {
   background-color: none !important;
   background: none !important;
 }
-
+.mat-mdc-select-trigger {
+  top: -5px !important;
+}
