--- a/src/app/main-page-reports/main-page-reports.component.scss
+++ b/src/app/main-page-reports/main-page-reports.component.scss
@@ -1,4 +1,27 @@
-
+#rolesDetailsBtn {
+  position: fixed;
+  bottom: 50px;
+  left: 125px;
+  z-index: 10;
+}
+table {
+  width: 95%;
+  margin: 20px 23px 1px 0px;
+}
+.mat-row:nth-child(odd) {
+  background-color: white;
+}
+.spinner {
+  left: 50%;
+  display: unset;
+}
+.mat-row:nth-child(even) {
+  background-color: aliceblue;
+}
+.mat-row:hover {
+  background-color: darkgray;
+  cursor: pointer;
+}
 
 .body {
   display: flex;
@@ -7,13 +30,15 @@
   width: 100%;
   margin-right: 0; /* Ensures the container is flush with the right side */
   padding-right: 0; /* Ensures no padding is pushing content to the left */
+
+
 }
 
-.seven {
-  width: 100%;
-  margin-right: 0;
-  padding-right: 0;
-}
+// .seven {
+//   width: 100%;
+//   margin-right: 0;
+//   padding-right: 0;
+// }
 
 .card-container {
   display: flex;
@@ -43,17 +68,58 @@
   font-weight: bold;
 }
 
-.title1 {
-  text-align: center;
-  margin-top: 8px;
-}
+// .title1 {
+//   text-align: center;
+//   margin-top: 8px;
+// }
 
-.seven h1 {
-  font-size: 30px;
-  font-weight: 300;
-  color: #222;
-  letter-spacing: 1px;
+/* This targets all h1 elements that are inside a 'department' class, regardless of the department's unique class */
+// .department h1 {
+//   font-size: 30px;
+//   font-weight: 300;
+//   color: #222;
+//   letter-spacing: 1px;
+//   text-align: center; /* Centers the text within the H1 element */
+
+//   text-transform: uppercase;
+//   display: grid;
+//   grid-template-columns: 1fr max-content 1fr;
+//   grid-template-rows: 27px 0;
+//   grid-gap: 20px;
+//   align-items: center;
+// }
+
+// .department h1:after,
+// .department h1:before {
+//   content: " ";
+//   display: block;
+//   border-bottom: 1px solid rgb(70, 100, 222);
+//   border-top: 1px solid rgb(70, 100, 222);
+//   height: 5px;
+//   background-color: #f8f8f8;
+// }
+
+
+.nine h1 {
+  text-align: center;
+  font-size: 50px;
   text-transform: uppercase;
+  color: rgb(54, 10, 214);
+  letter-spacing: 1px;
+  font-family: "Playfair Display", serif;
+  font-weight: 400;
+}
+.nine h1 span {
+  margin-top: 5px;
+  font-size: 15px;
+  color: rgb(159, 52, 235);
+  word-spacing: 1px;
+  font-weight: normal;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+  font-family: "Raleway", sans-serif;
+  font-weight: 500;
+
   display: grid;
   grid-template-columns: 1fr max-content 1fr;
   grid-template-rows: 27px 0;
@@ -61,12 +127,15 @@
   align-items: center;
 }
 
-.seven h1:after,
-.seven h1:before {
+.nine h1 span:after,
+.nine h1 span:before {
   content: " ";
   display: block;
-  border-bottom: 1px solid rgb(70, 100, 222);
-  border-top: 1px solid rgb(70, 100, 222);
-  height: 5px;
-  background-color: #f8f8f8;
+  // border-bottom: 1px solid rgb(60, 15, 223);
+  // border-top: 1px solid rgb(60, 15, 223);
+  //height: 5px;
+  //background-color: rgb(187, 215, 254);
+}
+.bold-header {
+  font-weight: bold;
 }
