--- a/src/app/users/permissions-dialog/permissions-dialog.component.html
+++ b/src/app/users/permissions-dialog/permissions-dialog.component.html
@@ -25,21 +25,35 @@
             <span class="label"> טלפון </span>
             <span class="value">{{ user.cellNumber }}</span>
           </div>
+          <div class="field">
+            <span class="label"> הרשאות </span>
+            <span class="value">{{ user.role }}</span>
+          </div>
+          <div class="field">
+            <span class="label"> הרשאות </span>
+            <span class="value">{{ user.department }}</span>
+          </div>
         <!-- Repeat for other fields -->
       </div>
 
       <!-- mat-select for permissions -->
       <mat-form-field class="permissions-select" appearance="fill">
-        <mat-label>הרשאות</mat-label>
-        <mat-select [(ngModel)]="user.permission">
-          <mat-option
-            *ngFor="let permission of permissions"
-            [value]="permission"
-          >
+        <mat-label>הוספת הרשאה</mat-label>
+        <mat-select [(ngModel)]="user.role" name="roles" multiple>
+          <mat-option *ngFor="let permission of permissions" [value]="permission">
             {{ permission }}
           </mat-option>
         </mat-select>
       </mat-form-field>
+      <mat-form-field class="permissions-select" appearance="fill">
+        <mat-label>הוספת מחלקה</mat-label>
+        <mat-select [(ngModel)]="user.department" name="department" multiple>
+          <mat-option *ngFor="let department of Department" [value]="department">
+            {{ department }}
+          </mat-option>
+        </mat-select>
+      </mat-form-field>
+      
     </form>
   </mat-dialog-content>
   <!-- Buttons to close the dialog or perform actions -->
