--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -1,7 +1,5 @@
 <div class="nine">
-  <h1>
-    {{ titleUnit }}<span>{{ Title2 }}{{ totalResults }}</span>
-  </h1>
+  <h1>{{ titleUnit }}<span></span></h1>
 </div>
 
 <div class="mat-elevation-z8" dir="rtl">
@@ -43,8 +41,16 @@
       <th mat-header-cell *matHeaderCellDef>טלפון</th>
       <td mat-cell *matCellDef="let element">{{ element.cellNumber }}</td>
     </ng-container>
-    <ng-container matColumnDef="btn">
+    <ng-container matColumnDef="roles">
       <th mat-header-cell *matHeaderCellDef>הרשאות</th>
+      <td mat-cell *matCellDef="let element">{{ element.roles }}</td>
+    </ng-container>
+    <ng-container matColumnDef="department">
+      <th mat-header-cell *matHeaderCellDef>מחלקות</th>
+      <td mat-cell *matCellDef="let element">{{ element.department }}</td>
+    </ng-container>
+    <ng-container matColumnDef="btn">
+      <th mat-header-cell *matHeaderCellDef>עדכון</th>
       <td mat-cell *matCellDef="let element">
         <button
           mat-raised-button
